# bedrock

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
bedrock/: .env.example  entrypoint.sh  main.py  testharness.py  utils.py
bedrock/agents/: __init__.py  baseAgent.py  customChat.py  diligence.py  testharness.py
bedrock/api/v1/: agents.py  projects.py  templates.py
bedrock/dataroom/: AR_AP_AgingReport.txt  ArticlesOfIncorporation.txt  AssetRegister.txt  BoardMeetingMinutes.txt  BusinessPlanStrategy.txt  CashFlowProjections.txt  CompanyOverview.txt  CompetitorAnalysis.txt  CorporatePoliciesProcedures.txt  CustomerSupplierLists.txt  DebtSchedule.txt  EmployeeContracts.txt  EnvrironmentalAssessment.txt  FinancialStatements.txt  IndustryTrends.txt  IntegrationPlan.txt  IntellectualProperty.txt  LitigationSummary.txt  MarketAnalysis.txt  RealEstate.txt  ShareholderAgreement.txt  ShareholderMeetingMinutes.txt  TaxReturn.txt  TeamBiography.txt
bedrock/storage/: default__vector_store.json  docstore.json  index_store.json
bedrock/templates/: __init__.py  base.py  templates.py
docker/: Dockerfile  api.Dockerfile  frontend.Dockerfile
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
frontend/src/: app.d.ts  hooks.server.ts
frontend/src/lib/icons/: index.ts
frontend/src/lib/interfaces/: interfaces.ts
frontend/src/lib/server/: config.ts  (+5 more)
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
supabase/: config.toml
supabase/migrations/: 20241007033321_init.sql
(+42 files in other folders)
