[tool.poetry]
name = "bedrock"
version = "0.1.0"
description = ""
authors = ["Connor McLean <c.mclean165@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index = "^0.11.6"
openai = "^1.44.0"
python-dotenv = "^1.0.1"
lancedb = "^0.12.0"
llama-index-vector-stores-lancedb = "^0.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
