[tool.poetry]
name = "bedrock"
version = "0.1.0"
description = ""
authors = ["Connor McLean <c.mclean165@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index = "^0.11.6"
openai = "^1.44.0"
python-dotenv = "^1.0.1"
lancedb = "^0.12.0"
llama-index-vector-stores-lancedb = "^0.2.2"
openpyxl = "^3.1.5"
docx2txt = "^0.8"
markdown = "^3.7"
pdfkit = "^1.0.0"
python-docx = "^1.1.2"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
socketio = "^0.2.1"
fastapi-socketio = "^0.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
